# egomo_calibration

./: .gitignore  CMakeLists.txt  Installation.md  README.md  egomo_calibration-scm-1.rockspec  egomo_calibration.project  egomo_calibration.workspace  testHandEyeCalib.lua
exampleCalibData/: calibration.t7  calibration_ir.t7  calibration_rgb.t7  calibration_rgbd.t7
examples/: FctPointers.lua  ImageSaver.lua  StereoCalibration.lua  calibration_depth.lua  calibration_hand_eye.lua  calibration_intrinsic.lua  calibration_stereo.lua  capture.lua  data_conversion.py  depthcalibration.lua  dh_calib_motoman.py  dh_calib_motoman_end_of_arm_cameras.py  dh_calib_motoman_end_of_arm_cameras_v2.py  dh_calib_motoman_leftArm_leftArmCams.py  dh_calib_motoman_rightArm_onTorsoCams.py  dh_calib_motoman_rightArm_onboardCams.py  dh_calib_motoman_rightArm_rightArmCams.py  dh_calibration.lua  intrinsicCalib.lua  move_joints_around_offsets.py  multi_capture.lua  multi_target_ur5.lua  publish_hand_eye.py  run_data_conversion.sh  run_dh_calib_motoman.sh  run_dh_calib_motoman_end_of_arm_cameras.sh  run_dh_calib_motoman_end_of_arm_cameras_v2.sh  run_dh_calib_motoman_leftArm_leftArmCams.sh  run_dh_calib_motoman_rightArm_onTorsoCams.sh  run_dh_calib_motoman_rightArm_onboardCams.sh  run_dh_calib_motoman_rightArm_rightArmCams.sh  testHandEyeCalib.lua
lua/: Calibration.lua  Camera.lua  Capture.lua  DepthCalibrator.lua  DepthCamera.lua  EgomoSensor.lua  ImageSaver.lua  capture.lua  env.lua  handEyeCalibration.lua  init.lua  test.lua  xamla3d.lua
python/: setup.py
python/python/: Calibration.py  CalibrationV2.py  Calibration_rightArm_onTorsoCams.py  __init__.py  env.py  pattern_localisation.py  xamla3d.py
src/: bundle_adjuster.cpp  bundle_adjuster_rightArm_onTorsoCams.cpp  bundle_adjuster_v2.cpp  egomo_calibration.h
